fix: migrate database to mysql

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DB_NAME=postgres
-DB_PORT=49154
-DB_USERNAME=postgres
-DB_PASSWORD=postgrespw
-DB_HOST=localhost
+DB_NAME=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_HOST=
